--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pagina login</title>
+	<title>Página login</title>
 	<meta charset="utf-8">
+
+	<!-- estilo CSS -->
 	<link rel="stylesheet" type="text/css" href="estilo.css">
+
 </head>
 
 <body id="container">
 	<nav id="tela-login">
-		<div>
-			<input class="email" type="text" name="email" id="email" placeholder="Digite seu e-mail">
-		</div>
-		<div>
-			<input class="senha" type="password" name="senha" id="senha" placeholder="Digite sua senha">
-		</div>
-		<div>
-			<input class="submit" type="submit" value="Logar">
-		</div>
-	</nav>
+			
+			<div>
+				<input class="email" type="text" name="email" id="email" placeholder="Digite seu e-mail">
+			</div>
+			<div>
+				<input class="senha" type="password" name="senha" id="senha" placeholder="Digite sua senha">
+			</div>
+			<div>
+				<input class="submit" type="submit" value="Logar">
+			</div>
 
-	<footer>
 
-<h3>&copy; Copyright 2020-2021</h3>
-	
-</footer>
+		</nav>
+
+		<footer>
+
+		<h3>&copy; Copyright 2020-2021</h3>
+
+	</footer>
+
 
 
 </body>
